# claude-agent-skills

./: README.md
commands/: README.md  ccm.md  code-review.md  cpr.md
plugins/: README.md
plugins/agent-council/: AGENTS.md  CLAUDE.md  README.ko.md  README.md  SKILL.md  council.config.yaml  package.json
plugins/agent-council/.claude-plugin/: plugin.json
plugins/agent-council/scripts/: council-job.js  council-job.sh
plugins/dev/: CLAUDE.md
plugins/doubt/: README.md
plugins/doubt/hooks/: hooks.json
plugins/gmail/: README.md
plugins/google-calendar/: README.md
plugins/google-calendar/skills/google-calendar/: SKILL.md  pyproject.toml
plugins/google-calendar/skills/google-calendar/examples/: parallel-fetch.md  quick-query.md
plugins/google-calendar/skills/google-calendar/scripts/: calendar_client.py  fetch_events.py  manage_events.py  setup_auth.py
plugins/interactive-review/: .mcp.json  CLAUDE.md  README.md
plugins/kakaotalk/: README.md
plugins/podcast/: README.md
plugins/say-summary/: README.md
plugins/session-wrap/: README.md
plugins/team-assemble/: README.md
plugins/youtube-digest/: README.md
skills/claude-orchestrator/: CLAUDE.md  LICENSE  README.md
skills/cnotion/: README.md  SKILL.md
skills/cobsidian/: README.md  SKILL.md
skills/instructor/: README.md  SKILL.md
skills/korean-narration/: README.md  SKILL.md
skills/subagent-driven-development/: README.md  SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
skills/test-driven-development/: README.md
skills/writing-plans/: README.md
(+112 files in other folders)
